--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<form action="/submit">
+		<label>Name:</label>
+		<input type="text" name="Name" id="name" placeholder="Name"><br>
+		<label>Phone Number:</label>
+		<input type="text" name="Phone Number" id="phone" placeholder="Phone Number"><br>
+		<label>Address:</label>
+		<input type="text" name="Address" id="address" placeholder="Address"><br>
+		<label>Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox" ><br>
+		<div class="form-group">
+        <label for="preferredBreeds">Please select your preferred breeds</label>
+        <select id="preferredBreeds" name="preferredBreeds[]" multiple required>
+          <option value="labrador">Labrador</option>
+          <option value="german-shepherd">German Shepherd</option>
+          <option value="golden-retriever">Golden Retriever</option>
+          <option value="bulldog">Bulldog</option>
+          <option value="poodle">Poodle</option>
+        </select>
+      </div>
+
+
+		<br>
+		<button type="submit" id="submit">Submit</button>
+	</form>
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
